# TeiaCareSDK

./: .clang-format  .clang-format-ignore  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile-conan  Dockerfile.docs  Dockerfile.valgrind  LICENSE  README.md  conanfile.py
.github/workflows/: ci.yml  ci_linux.yml  ci_windows.yml  coverage.yml  docs.yml
.github/workflows /: docs.yml
ci/: build.yml  publish_conan_package.sh  test_conan_package.sh
cmake/: banner.cmake  benchmarks.cmake  clang_format.cmake  clang_tidy.cmake  compiler_info.cmake  coverage.cmake  cppcheck.cmake  cpplint.cmake  docs.cmake  doxygen.cmake  examples.cmake  options.cmake  packages.cmake  sanitizer_address.cmake  sanitizer_thread.cmake  sanitizers_address.cmake  unit_tests.cmake  warnings.cmake
docs/: Doxyfile
scripts/: cmake.py  requirements.txt
scripts/cmake/: build.py  command.py  configure.py  install.py  package.py
scripts/conan/: create.py  create_and_upload.sh  install.py  profile.py  setup.py  upload.py
scripts/tools/: command.py  run_benchmarks.py  run_clang_format.py  x.py  (+12 more)
sdk/: CMakeLists.txt  main_uuid.cpp
sdk/benchmarks/: CMakeLists.txt  _conanfile.txt  conanfile.txt
sdk/benchmarks/src/: benchmark_event_dispatcher.cpp  benchmark_event_dispatcher.hpp  main.cpp
sdk/docs/: Doxyfile
sdk/docs/style/: doxygen-awesome-sidebar-only.css  footer.html  header.html
sdk/examples/: CMakeLists.txt  conanfile.txt
sdk/examples/example_task_scheduler/: CMakeLists.txt  example_bind.cpp  example_duplicate.cpp  example_every.cpp  example_nested.cpp  example_pool.cpp  example_recursive.cpp  example_remove.cpp  example_scheduler.cpp  example_test.cpp  example_unordered.cpp  example_update_interval.cpp
sdk/examples/example_task_scheduler/utils/: utils.hpp
sdk/examples/src/: example_argparse.cpp  example_blocking_queue.cpp  example_date.cpp  example_datetime.cpp  example_datetime_date.cpp  example_datetime_datetime.cpp  example_datetime_time.cpp  example_datetime_timedelta.cpp  example_event_dispatcher.cpp  example_geometry_line.cpp  example_geometry_point.cpp  example_geometry_range.cpp  example_geometry_rectangle.cpp  example_geometry_size.cpp  example_high_precision_timer.cpp  example_observable.cpp  example_rate_limiter.cpp  example_service_locator.cpp  example_task_scheduler.cpp  example_thread_pool.cpp  example_time.cpp  example_timedelta.cpp  example_uuid.cpp  example_version.cpp  sanitizer_check.cpp
sdk/examples/src/utils/: callback_timer.hpp  elapsed_timer.hpp
sdk/include/sdk/: blocking_queue.hpp  clock.hpp  concurrent_queue.hpp  data_channel.hpp  endianness.hpp  event_dispatcher.hpp  function_traits.hpp  high_precision_timer.hpp  macros.hpp  non_copyable.hpp  non_moveable.hpp  observable.hpp  queue_mpmc.hpp  queue_mpsc.hpp  queue_spsc.hpp  rate_limiter.hpp  service_locator.hpp  shutdown_signal_handler.hpp  signal_handler.hpp  singleton.hpp  stopwatch.hpp  task.hpp  task_scheduler.hpp  thread_pool.hpp  unreachable.hpp  uuid.hpp  uuid_generator.hpp  version.hpp
sdk/include/sdk/datetime/: date.hpp  datetime.hpp  time.hpp  timedelta.hpp
sdk/include/teiacare/sdk/: blocking_queue.hpp  clock.hpp  data_types.hpp  endianness.hpp  event_dispatcher.hpp  function_traits.hpp  high_precision_timer.hpp  math.hpp  non_copyable.hpp  non_moveable.hpp  observable.hpp  rate_limiter.hpp  service_locator.hpp  signal_handler.hpp  singleton.hpp  stopwatch.hpp  task.hpp  task_scheduler.hpp  thread_pool.hpp  unreachable.hpp  uuid.hpp  uuid_generator.hpp  version.hpp
sdk/include/teiacare/sdk/argparse/: argument_base.hpp  argument_parser.hpp  flag_argument.hpp  optional_argument.hpp  positional_argument.hpp
sdk/include/teiacare/sdk/datetime/: date.hpp  datetime.hpp  time.hpp  timedelta.hpp
sdk/include/teiacare/sdk/datetime/date/: date.h  ios.h  islamic.h  iso_week.h  julian.h  ptz.h  solar_hijri.h  tz.cpp  tz.h  tz_private.h
sdk/include/teiacare/sdk/geometry/: line.hpp  point.hpp  range.hpp  rectangle.hpp  size.hpp
sdk/src/: event_dispatcher.cpp  high_precision_timer.cpp  rate_limiter.cpp  service_locator.cpp  shutdown_signal_handler.cpp  signal_handler.cpp  task.cpp  task_scheduler.cpp  thread_pool.cpp  uuid.cpp  uuid_generator.cpp  version.cpp  version.cpp.in  version.hpp.in
sdk/src/argparse/: argument_parser.cpp
sdk/src/datetime/: date.cpp  date.h  datetime.cpp  time.cpp  timedelta.cpp
sdk/tests/: CMakeLists.txt  conanfile.txt
sdk/tests/src/: main.cpp  test_argparse_argument_base.cpp  test_argparse_argument_base.hpp  test_argparse_argument_parser.cpp  test_argparse_argument_parser.hpp  test_argparse_flag_argument.cpp  test_argparse_flag_argument.hpp  test_argparse_optional_argument.cpp  test_argparse_optional_argument.hpp  test_argparse_positional_argument.cpp  test_argparse_positional_argument.hpp  test_blocking_queue.cpp  test_blocking_queue.hpp  test_datetime_date.cpp  test_datetime_date.hpp  test_datetime_datetime.cpp  test_datetime_datetime.hpp  test_datetime_time.cpp  test_datetime_time.hpp  test_datetime_timedelta.cpp  test_datetime_timedelta.hpp  test_event_dispatcher.cpp  test_event_dispatcher.hpp  test_geometry_line.cpp  test_geometry_line.hpp  test_geometry_point.cpp  test_geometry_point.hpp  test_geometry_range.cpp  test_geometry_range.hpp  test_geometry_rectangle.cpp  test_geometry_rectangle.hpp  test_geometry_size.cpp  test_geometry_size.hpp  test_high_precision_timer.cpp  test_high_precision_timer.hpp  test_observable.cpp  test_observable.hpp  test_rate_limiter.cpp  test_rate_limiter.hpp  test_service_locator.cpp  (+16 more)
sdk/tests/test_task_scheduler/: test_at.cpp  test_disable.cpp  test_duplicated.cpp  test_every.cpp  test_in.cpp  test_missing.cpp  test_pool.cpp  test_remove.cpp  test_stop.cpp  test_task_scheduler.hpp
sdk_integration_test/: CMakeLists.txt  build.py
sdk_integration_test/src/: integration_test.cpp
sdk_package_test/: CMakeLists.txt  README.md  _conanfile.txt  build.py
sdk_package_test/src/: main.cpp
test_package/: CMakeLists.txt  build.py  conanfile.py
(+7 files in other folders)
