include(examples)
add_example(${TARGET_NAME} example_blocking_queue)
add_example(${TARGET_NAME} example_date)
add_example(${TARGET_NAME} example_event_dispatcher)
add_example(${TARGET_NAME} example_high_precision_timer)
add_example(${TARGET_NAME} example_observable)
add_example(${TARGET_NAME} example_rate_limiter)
add_example(${TARGET_NAME} example_task_scheduler)
add_example(${TARGET_NAME} example_thread_pool)
add_example(${TARGET_NAME} example_service_locator)
add_example(${TARGET_NAME} example_time)
add_example(${TARGET_NAME} example_timedelta)
add_example(${TARGET_NAME} example_uuid)
add_example(${TARGET_NAME} example_version)

if(TC_ENABLE_SANITIZER_ADDRESS)
    include(sanitizer_address)
    add_executable(sanitizer_check src/sanitizer_check.cpp)
    add_sanitizer_address(sanitizer_check)
endif()